tests/parser/errors/struct_literal.rv
Foo.{45}
// For synchronization
var a = 1
Foo.{a


